2007-09-26  Dan Williams  <dcbw@redhat.com>

	* src/vpn-password-dialog.c
	  src/vpn-password-dialog.h
	  src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): call out to the VPN
			password dialog helper bits

2007-09-25  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
		- (wired_menu_item_new): Dim wired items based on carrier state

2007-09-25  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- Fix various errors and warnings

2007-09-25  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
		- (response_cb): use nm_settings_new_error() to create error messages

	* src/applet-dbus-settings.c
		- (new_error): remove
		- (applet_dbus_connection_settings_get_secrets): use
			nm_settings_new_error() to create error messages

2007-09-25  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_get_secrets): handle new 'request_new'
			parameter by asking the user for new secrets explicitly rather than
			pulling from the keyring

2007-09-24  Matthias Clasen  <mclasen@redhat.com>

	* src/applet.c (nma_menu_create): Update the icon after setting
	the icon size.

2007-09-23  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/Makefile.am
	  src/vpn-properties/nm-vpn-properties.c
	  src/vpn-properties/nm-vpn-ui-interface.h
		- Rework the VPN UI module interface so it's based on NMConnections
			rather than a bunch of random things.  Clean up the properties
			program code a bunch and use the GConf helpers common code
			for GConf stuff

2007-09-23  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.h
	  src/gconf-helpers/gconf-helpers.c
	  src/applet-dbus-settings.c
		- (nm_gconf_write_connection): new function; move code that writes an
			NMConnection to GConf into the GConf helpers common code

2007-09-21  Dan Williams  <dcbw@redhat.com>

	* src/password-dialog.c
		- (update_button_cb): fix key length for 40-bit WEP
