@@ -1,3 +1,9 @@
+2007-09-27  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dbus-settings.c
+		- (get_secrets, applet_dbus_connection_settings_get_secrets): correctly
+			handle VPN secrets too
+
 2007-09-26  Dan Williams  <dcbw@redhat.com>
 
 	* src/vpn-password-dialog.c
